--- a/ruby/hermez/Gemfile
+++ b/ruby/hermez/Gemfile
@@ -28,6 +28,7 @@ gem 'haml-rails'
 gem 'high_voltage'
 gem 'jquery-rails'
 gem 'pg'
+gem 'oauth2'
 group :development do
   gem 'better_errors'
   gem 'html2haml'
