--- a/ruby/hermez/Gemfile
+++ b/ruby/hermez/Gemfile
@@ -22,6 +22,9 @@ group :development do
   gem 'spring'
   gem 'spring-watcher-listen', '~> 2.0.0'
 end
+
+gem 'parallel'
+
 gem 'tzinfo-data', platforms: [:mingw, :mswin, :x64_mingw, :jruby]
 gem 'bootstrap', '~> 4.0.0.alpha6'
 gem 'haml-rails'
