expanded user importing to include pisciners, added piscine bool to table, added piscine option to manual add

--- a/ruby/hermez/Gemfile
+++ b/ruby/hermez/Gemfile
@@ -24,6 +24,8 @@ group :development do
 end
 
 gem 'parallel'
+gem 'filterrific'
+gem 'pg_search'
 
 gem 'tzinfo-data', platforms: [:mingw, :mswin, :x64_mingw, :jruby]
 gem 'bootstrap', '~> 4.0.0.alpha6'
